# sdl

./: .gitignore  CMakeLists.txt
include/: entity.h  math.h  renderWindow.h  utils.h
src/: entity.cpp  main.cpp  math.cpp  renderWindow.cpp
